test/preprocessor/valid/undef.glsl
#define A 1
#undef A
#define A 2
int i = A;
