test/preprocessor/invalid/redef.glsl
#define A 1
#define A 2
